	PR rtl-optimization/31391 	* cfgcleanup.c (try_optimize_cfg): If a removed label is turned 	into a DELETED_LABEL note, and the label is in an empty basic 	block, update BB_END as well as BB_HEAD.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@123406 138bc75d-0d04-0410-961f-82ee72b054a4